--- a/css/choseEventPage.css
+++ b/css/choseEventPage.css
@@ -2,6 +2,8 @@
     * {
         margin: 0px;
         padding: 0px;
+        font-family: 'helvetica';
+        font-style: normal;
     }
     a {
         text-decoration: none;
